partially complete destination